# prostep

./: .gitignore  CMakeLists.txt  README.md  build_local.bat  pyproject.toml  requirements-stl-reconstructor.txt  setup.sh
artifacts/e2e/: primitives_high.json  primitives_high.step
artifacts/e2e/inputs/: combo.stl  helix_thread_like.stl  primitives.stl
assets/shaders/glsl330/: lighting.fs  lighting.vs
packaging/: stl_reconstructor_gui.spec  update_manifest.sample.json  windows_version_info.txt
scripts/: build_stl_reconstructor_exe.ps1  build_windows.ps1  e2e_real_stl_occ_open3d.py  make_update_manifest.py  proSTEP.py  run_stl_reconstructor_gui.ps1  setup_env_windows.ps1  setup_stl_reconstructor_windows.ps1
src/: main.cpp
stl_reconstructor/: __init__.py  app_entry_gui.py  brep_builder.py  cli.py  config.py  feature_analysis.py  fitting.py  gui_app.py  models.py  occ_runtime.py  occ_tessellate.py  pipeline.py  preprocess.py  segmentation.py  step_export.py  updater.py  version.py
stl_reconstructor/tests/: test_fitting_smoke.py
